Primera llamada, usando AJAX

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <button id="cargar" value="cargar">Cargar</button>
 
         <div id="contenido">
-
+            Texto anterior
         </div>
     </div>
     <script src="js/05.js"></script>
